@@ -342,6 +342,10 @@ void wvGetSTSH(STSH *item,U32 offset,U32 len,FILE *fd)
 				case sgcChp:
 					/*wvTrace("sgcChp style, len is %d %d\n",item->std[i].grupxf[0].cbUPX,item->std[i].grupe[0].chpx.cbGrpprl);*/
 					wvInitCHPXFromIstd(&(item->std[i].grupe[0].chpx),item->std[i].istdBase,item);
+
+					if (word6)
+						wvUpdateCHPXBucket(&(item->std[i].grupxf[0]));
+						
 					wvMergeCHPXFromBucket(&(item->std[i].grupe[0].chpx),&(item->std[i].grupxf[0]));
 					/* UPE.chpx.istd is set to the style's istd */
 					item->std[i].grupe[0].chpx.istd = i;	 /*?*/
